[gd_scene load_steps=3 format=3 uid="uid://b0vweaph64yog"]

[ext_resource type="PackedScene" uid="uid://basbiqrev505v" path="res://scenes/spawner.tscn" id="1_6js62"]
[ext_resource type="Script" uid="uid://bv37qytmlb43a" path="res://scripts/taking a random_spawning point.gd" id="1_7vgnx"]

[node name="radom_spawning" type="Node3D"]
script = ExtResource("1_7vgnx")

[node name="spawner" parent="." instance=ExtResource("1_6js62")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -33.7794)

[node name="spawner2" parent="." instance=ExtResource("1_6js62")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.88389, 0, -34.235714)

[node name="spawner3" parent="." instance=ExtResource("1_6js62")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.65625, 0, -17.71189)

[node name="spawner4" parent="." instance=ExtResource("1_6js62")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -38.154655, 0, -2.2314053)

[node name="spawner5" parent="." instance=ExtResource("1_6js62")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.827076, 0, 12.856468)

[node name="spawner6" parent="." instance=ExtResource("1_6js62")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.590218, 0, 30.91021)

[node name="spawner7" parent="." instance=ExtResource("1_6js62")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.36727142, 0, 42.86866)

[node name="spawner8" parent="." instance=ExtResource("1_6js62")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.35957, 0, 39.909477)

[node name="spawner9" parent="." instance=ExtResource("1_6js62")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32.286945, 0, 31.389381)

[node name="spawner10" parent="." instance=ExtResource("1_6js62")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45.96445, 0, 1.440033)

[node name="spawner11" parent="." instance=ExtResource("1_6js62")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45.96445, 0, -15.25079)

[node name="spawner12" parent="." instance=ExtResource("1_6js62")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 38.645473, 0, -35.521557)

[node name="spawner13" parent="." instance=ExtResource("1_6js62")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.328388, 0, -45.925327)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
